fix alignment on workout detail

--- a/frontend/src/components/workouts/workout_description/workout-detail.scss
+++ b/frontend/src/components/workouts/workout_description/workout-detail.scss
@@ -15,7 +15,7 @@
     // background: rgb(194,206,255);
     // background: linear-gradient(50deg, rgba(194,206,255,1) 0%, rgba(238,253,241,1) 100%);
 
-    position: absolute;
+    // position: absolute;
     text-align: center;
     z-index: -1;
 }
@@ -89,6 +89,10 @@
     background-color: black;
     color: white;
   }
+
+  .workout-detail-item-pic {
+      display: none;
+  }
 }
 
 .workout-detail-description-parent {
@@ -137,9 +141,9 @@
 
 .workout-detail-item-pic {
     box-sizing: border-box;
-    height: 250px;
-    width: 300px;
-    // border: 3px solid black;
+    position: relative;
+    height: 30vh;
+    width: 20vw;
 }
 
 .workout-detail-item-exercise {
@@ -160,18 +164,18 @@
 .wo-detail-finished-button {
     background-color: rgb(213,69,77);
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     font-family: 'Nunito', sans-serif;
     font-weight: 700;
-    margin: .35em;
+    margin: 3rem;
     border: none;
     border-radius: 3px;
     box-shadow: 3px 10px 15px 2px #888888;
     width: fit-content;
     padding: .85em;
     height: fit-content;
+    box-sizing: border-box;
 
-    position: absolute;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -194,8 +198,8 @@
 }
 
 .exercise-name {
-    max-width: 200px;
-    min-width: 200px;
+    max-width: 10vw;
+    min-width: 10vw;
     height: 100%;
     font-family: 'Nunito', sans-serif;
     color: darkslategrey;
